# internal/dto/dto.go
@@ -4,6 +4,19 @@ type ErrorResponse struct {
 	Error string `json:"error"`
 }
 
+type StatusResponse struct {
+	Status string `json:"status"`
+}
+
+type CreatedResponse struct {
+	ID string `json:"id"`
+}
+
+type ListResponse[T any] struct {
+	TotalCount int64 `json:"total_count"`
+	Data       []T   `json:"data"`
+}
+
 type RawUnmarshaler[T any] interface {
 	UnmarshalRaw(data any) (T, error)
 }
